# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.22.5
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Fix mask syntax if slots and repositories are used in the same mask,
	  see http://forums.gentoo.org/viewtopic-p-6479886.html
	- Fix NONEXISTENT_IF_MASKED (check not only keywords but also mask)
	- Divide memory usage of global*.cc during compiling more even.

*eix-0.22.4
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Introduce eix-installed.
	- Rewrite eix-test-obsolete almost completely.
	- Do not require SA_SIGINFO (thanks Markus Duft <mduft at gentoo.org>)
	  http://bugs.gentoo.org/show_bug.cgi?id=343071
	- Add a forgotten translation to eix-installed-after

*eix-0.22.3
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Support repository names in config files:
	  http://bugs.gentoo.org/show_bug.cgi?id=340098
	  The current implementation stores reponames in every version and
	  thus increases memory usage, but this is perhaps cleaner than to tie
	  the names to the database headers.
	- Convert manpage a-diaresis back to groff format (no utf8)

*eix-0.22.2
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Improve error handling when reading profile masks
	- Fix sqlite.cc: http://bugs.gentoo.org/show_bug.cgi?id=336896
	- Fix sqlite automagic

*eix-0.22.1
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- use /etc/portage/package.nowarn instead of
	  /etc/portage/package.*.nowarn; the latter is now obsolete.
	  If you want continue to use it, set OBSOLETE_NOWARN=true
	- Support wildcards in /etc/portage/package.nowarn
	- Ignore CVS/RCS/SCCS dirs in recursive dir reading
	- Support /etc/portage/make.conf

*eix-0.22.0
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Support wildcards in config-files.
	  This required a rewrite of the whole mask handling: Even if no
	  wildcards are used, a crucial change in the data structure is needed
	  (one can no longer use only a sorted list of names for lookup)